--- a/primerHTML5.html
+++ b/primerHTML5.html
@@ -8,12 +8,16 @@
 <body>
 	<header>
 		<h1>Título de la aplicación</h1>
-		logo de la empresa
-		<img src="" alt="">
-		Menú de navegación <br>
+		<img src="img/logotec.png" alt="Logo Empresa">
 		<nav>
-			etiquetas para navegar entre las opciones de la 
-			página.
+			<ul>
+				<li>Inicio</li>
+				<li>Altas</li>
+				<li>Bajas</li>
+				<li>Cambios</li>
+				<li>Consultas</li>
+				<li>Salir</li>
+			</ul>
 		</nav>		
 	</header>
 	<article></article>
