--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -24,16 +24,16 @@
 			</form>
 		</nav>		
 	</header>
-	<section>
+	<section id="seccion01">
 		<article>
 			<img src="img/slide2.jpg" alt="">
 		</article>
 	</section>
-	<section>
+	<section id="seccion02">
 		<article>
 			<img src="img/separador.jpg" alt="">
 			<br>
-			Una sección
+			<span class="unaSeccion">Una sección</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quod laudantium eaque maiores debitis. Itaque, ipsum maiores et officiis, quam mollitia aperiam quos aspernatur tenetur ab molestias ex quae enim.
 			<p></p>
@@ -42,7 +42,7 @@
 		<article>
 			<img src="img/separador.jpg" alt=""> 
 			<br>
-			Otra sección
+			<span class="otraSeccion">Otra sección</span>
 			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi inventore reiciendis incidunt et temporibus esse. Distinctio velit quidem rem aspernatur incidunt sunt eos ipsam saepe nihil mollitia, molestiae vitae minus.
 			<br>
@@ -53,7 +53,7 @@
 		<article>
 			<img src="img/separador.jpg" alt="">
 			<br>
-			Un vídeo
+			<span class="otraSeccion">Un vídeo</span>
 			<br>
 			<img src="img/video.jpg" alt="">
 		</article>
