Al dar clic en el boton, muestra datos extraidos de randomuser.me (nombre,apellido y foto)

--- a/randomuser/index.html
+++ b/randomuser/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Usuarios aleatorios</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+	<button id="btnInfo">Información</button>
+	<p><p>
 	<img src="" id="imgFoto"> <br>
 	<div id="txtNombre"></div>
 	<script>
@@ -12,3 +15,10 @@
 	</script>
 </body>
 </html>
+
+
+
+
+
+
+
