--- a/randomuser/index.html
+++ b/randomuser/index.html
@@ -6,10 +6,21 @@
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-	<button id="btnInfo">Información</button>
-	<p><p>
-	<img src="" id="imgFoto"> <br>
-	<div id="txtNombre"></div>
+	<main>
+		<article id="izquierda">
+			<button id="btnInfo">Información</button>
+		</article>
+		<article id="derecha">			
+			<img src="" id="imgFoto"> <br>
+			<div id="txtNombre"></div> 
+			<div id="txtGenero"></div> 
+			<div id="txtDireccion"></div> 
+			<div id="txtEmail"></div> 
+			<div id="txtUsuario"></div> 
+			<div id="txtNombre"></div> 
+		</article>
+	</main>
+	
 	<script>
 		require('./index.js');
 	</script>
